End-to-End test setup, failing

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Hello from test template Olawale</h1>
+    <h1>Business Brace Jobs and careers</h1>
 </body>
 
 </html>
