complete static files setup

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <title>Document</title>
+    <title>Home | Jobs and Careers</title>
 </head>
 
 <body>
-    <h1>Business Brace Jobs and careers</h1>
+    <h1>Business Brace Jobs and Careers</h1>
+
+
+    {% block content %}
+
+    {% endblock content %}
+
 </body>
 
 </html>
