--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -3,4 +3,12 @@
 
 {% block content %}
 <h2>Hello from home</h2>
+
+<ul>
+
+    {% for item in job_items %}
+    <li>{{item.title}}</li>
+    {% endfor %}
+
+</ul>
 {% endblock content %}
