--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,10 +33,15 @@ html {
 }
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-dark-2);
+}
+
+.header {
+  width: 100%;
+  height: 95vh;
 }
 
 /*# sourceMappingURL=style.css.map */
