--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -41,9 +41,14 @@ html {
 }
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  font-family: Roboto, "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-dark-2);
+}
+
+.header {
+  width: 100%;
+  height: 95vh;
 }
