--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,10 @@
 :root {
+  --color-primary: #4e4edb;
+  --color-primary-rgb: 78, 78, 219;
+  --color-primary-light: #9090f0;
+  --color-primary-light-rgb: 144, 144, 240;
+  --color-primary-dark: #1414a0;
+  --color-primary-dark-rgb: 20, 20, 160;
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
@@ -8,6 +14,9 @@
   --color-grey-dark-3: #999;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --color-white: #fff;
+  --color-black: #000;
+  --default-font-size: 1.6rem;
   --line: 1px solid var(--color-grey-light-2);
 }
 
@@ -25,6 +34,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 @media only screen and (max-width: 68.75em) {
   html {
@@ -39,9 +49,299 @@ body {
   color: var(--color-grey-dark-2);
 }
 
+::selection {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
+
 .header {
   width: 100%;
-  height: 95vh;
+  height: 90vh;
+  background-image: linear-gradient(to right bottom, rgba(var(--color-primary-light-rgb), 0.8), rgba(var(--color-primary-dark-rgb), 0.8)), url("../img/nat-5.jpg");
+  background-size: cover;
+  background-position: top;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+.header__nav-box {
+  display: flex;
+  justify-content: space-between;
+}
+.header__logo {
+  height: 3.5rem;
+}
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.heading-primary {
+  color: var(--color-white);
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+  display: flex;
+  flex-direction: column;
+}
+.heading-primary--main {
+  font-size: 6rem;
+  font-weight: 400;
+  white-space: nowrap;
+}
+.heading-primary--sub {
+  font-size: 2rem;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: overline violet;
+  margin-bottom: 3rem;
+}
+
+.paragraph {
+  font-size: var(--default-font-size);
+}
+.paragraph:not(:last-child) {
+  margin-bottom: 3rem;
+}
+
+.navigation__header {
+  width: 100%;
+  height: 7rem;
+  background-color: var(--color-primary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+}
+.navigation__list {
+  list-style-type: none;
+  display: flex;
+}
+.navigation__item {
+  margin: 1rem;
+}
+.navigation__link:link, .navigation__link:visited {
+  font-size: 3rem;
+  font-weight: 300;
+  color: var(--color-white);
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.navigation__link:hover, .navigation__link:active {
+  background-color: green;
+}
+.navigation__current {
+  background-color: red;
+}
+
+.btn, .btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: var(--default-font-size);
+  border: none;
+  cursor: pointer;
+}
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: var(--shadow-dark);
+}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: var(--shadow-dark);
+}
+.btn--white {
+  background-color: var(--color-white);
+  color: var(--color-grey-dark-1);
+}
+.btn--white::after {
+  background-color: var(--color-white);
+}
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn--text:link, .btn--text:visited {
+  font-size: var(--default-font-size);
+  color: var(--color-primary);
+  display: inline-block;
+  text-decoration: none;
+  border: 0.2rem solid var(--color-primary);
+  padding: 0.5rem;
+  transition: all 0.2s;
+}
+.btn--text:hover {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  box-shadow: var(--shadow-dark);
+  transform: translateY(-2px);
+}
+.btn--text:active {
+  box-shadow: var(--shadow-dark);
+  transform: translateY(0);
+}
+
+.location {
+  font-size: 2rem;
+  color: var(--color-grey-dark-3);
+}
+.location__icon {
+  fill: var(--color-primary-light);
+  width: 2rem;
+  margin-right: 1rem;
+}
+
+.card {
+  box-shadow: var(--shadow-light);
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.jumbotron {
+  max-width: 100%;
+  background-color: var(--color-grey-light-2);
+  padding: 10rem 10rem;
+  position: relative;
+}
+.jumbotron__text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.jumbotron__heading {
+  font-size: 6rem;
+  text-transform: uppercase;
+}
+.jumbotron__detail {
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+}
+.jumbotron__detail--1 {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+.jumbotron__detail--2 {
+  margin-right: 1rem;
+}
+.jumbotron__detail--3 {
+  background-color: violet;
+  padding: 0 1rem;
+  border-radius: 10px;
+  color: var(--color-white);
+}
+
+.section-about {
+  background-color: var(--color-grey-light-1);
+  padding: 5rem 0;
+}
+
+.about-box {
+  width: 45%;
+  margin: 0 auto;
+}
+
+.section-position {
+  background-color: var(--color-grey-light-1);
+  padding: 5rem 0;
+}
+
+.position-box {
+  width: 45%;
+  margin: 0 auto;
+  list-style: none;
+}
+
+.position__list:not(:last-child) {
+  margin-bottom: 5rem;
+}
+.position__title {
+  font-size: 2.3rem;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.position__location {
+  display: flex;
+}
+.position__heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.position__link:link, .position__link:visited, .position__link:active {
+  text-decoration: none;
+  color: var(--color-grey-dark-2);
+}
+
+.position-detail {
+  padding: 10rem;
+  display: flex;
+  justify-content: space-between;
+}
+.position-detail__img {
+  width: 90%;
+  margin: 0 auto;
+}
+.position-detail__img-box {
+  flex: 1 0 50%;
+}
+.position-detail__category {
+  font-size: 4rem;
+  color: var(--color-grey-dark-3);
+}
+.position-detail__date {
+  font-size: 2rem;
+  font-weight: 700;
+}
+.position-detail__salary {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.position-detail__description {
+  font-size: var(--default-font-size);
+  margin: 2rem 0;
+}
+
+footer {
+  background-color: var(--color-primary-dark);
+  font-size: 1.5rem;
+  color: var(--color-grey-light-1);
+  padding: 2rem;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
