--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -1,4 +1,11 @@
 :root {
+  --color-primary: #4e4edb;
+  --color-primary-rgb: 78, 78, 219;
+  --color-primary-light: #9090f0;
+  --color-primary-light-rgb: 144, 144, 240;
+  --color-primary-dark: #1414a0;
+  --color-primary-dark-rgb: 20, 20, 160;
+
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
@@ -10,6 +17,11 @@
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+  --color-white: #fff;
+  --color-black: #000;
+
+  --default-font-size: 1.6rem;
 
   --line: 1px solid var(--color-grey-light-2);
 }
@@ -35,6 +47,8 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
 
+  scroll-behavior: smooth;
+
   @media only screen and (max-width: $bp-large) {
     font-size: 50%;
   }
@@ -48,7 +62,284 @@ body {
   color: var(--color-grey-dark-2);
 }
 
+::selection {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
+
 .header {
   width: 100%;
-  height: 95vh;
+  height: 90vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(var(--color-primary-light-rgb), 0.8),
+      rgba(var(--color-primary-dark-rgb), 0.8)
+    ),
+    url("../img/nat-5.jpg");
+  background-size: cover;
+  background-position: top;
+  padding: 2rem;
+
+  display: flex;
+  flex-direction: column;
+
+  &__nav-box {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__logo {
+    height: 3.5rem;
+  }
+
+  &__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
+
+//////////////////////////////////////////////////////
+// Heading
+.heading-primary {
+  color: var(--color-white);
+  text-transform: uppercase;
+
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+
+  display: flex;
+  flex-direction: column;
+
+  &--main {
+    font-size: 6rem;
+    font-weight: 400;
+    white-space: nowrap;
+  }
+
+  &--sub {
+    font-size: 2rem;
+    font-weight: 700;
+    white-space: nowrap;
+  }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: overline violet;
+  margin-bottom: 3rem;
+}
+
+.paragraph {
+  font-size: var(--default-font-size);
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+
+//////////////////////////////////////////////////////
+// Navigation
+.navigation {
+  &__nav {
+  }
+
+  &__header {
+    width: 100%;
+    height: 7rem;
+    background-color: var(--color-primary);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+  }
+
+  &__list {
+    list-style-type: none;
+
+    display: flex;
+  }
+
+  &__item {
+    margin: 1rem;
+  }
+
+  &__link {
+    &:link,
+    &:visited {
+      font-size: 3rem;
+      font-weight: 300;
+      color: var(--color-white);
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+
+    &:hover,
+    &:active {
+      background-color: green;
+    }
+  }
+
+  &__current {
+    background-color: red;
+  }
+}
+
+//////////////////////////////////////////////////////
+//  Button
+.btn {
+  &,
+  &:link,
+  &:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all 0.2s;
+    position: relative;
+    font-size: var(--default-font-size);
+
+    //Change for the <button> element
+    border: none;
+    cursor: pointer;
+  }
+
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: var(--shadow-dark);
+
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+    transform: translateY(-1px);
+    box-shadow: var(--shadow-dark);
+  }
+
+  &--white {
+    background-color: var(--color-white);
+    color: var(--color-grey-dark-1);
+
+    &::after {
+      background-color: var(--color-white);
+    }
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+}
+
+.btn--text {
+  &:link,
+  &:visited {
+    font-size: var(--default-font-size);
+    color: var(--color-primary);
+    display: inline-block;
+    text-decoration: none;
+    border: 0.2rem solid var(--color-primary);
+    padding: 0.5rem;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    box-shadow: var(--shadow-dark);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: var(--shadow-dark);
+    transform: translateY(0);
+  }
+}
+
+//////////////////////////////////////////////////////
+//  Location
+.location {
+  font-size: 2rem;
+  color: var(--color-grey-dark-3);
+
+  &__icon {
+    fill: var(--color-primary-light);
+    width: 2rem;
+    margin-right: 1rem;
+  }
+}
+
+//////////////////////////////////////////////////////
+//  Card
+.card {
+  box-shadow: var(--shadow-light);
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+//////////////////////////////////////////////////////
+// Jumbotron
+.jumbotron {
+  max-width: 100%;
+  background-color: var(--color-grey-light-2);
+  padding: 10rem 10rem;
+  position: relative;
+
+  &__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  &__heading {
+    font-size: 6rem;
+    text-transform: uppercase;
+  }
+
+  &__detail {
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+
+    &--1 {
+      display: flex;
+      align-items: center;
+      margin-right: 1rem;
+    }
+
+    &--2 {
+      margin-right: 1rem;
+    }
+
+    &--3 {
+      background-color: violet;
+      padding: 0 1rem;
+      border-radius: 10px;
+      color: var(--color-white);
+    }
+  }
 }
