--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -306,6 +306,7 @@ body {
   background-color: var(--color-grey-light-2);
   padding: 10rem 10rem;
   position: relative;
+  height: 20rem;
 
   &__text-box {
     position: absolute;
