--- a/static/css/style.css
+++ b/static/css/style.css
@@ -231,14 +231,12 @@ body {
   max-width: 100%;
   background-color: var(--color-grey-light-2);
   padding: 10rem 10rem;
-  position: relative;
-  height: 20rem;
+  min-height: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .jumbotron__text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
 }
 .jumbotron__heading {
@@ -311,6 +309,20 @@ body {
   padding: 10rem;
   display: flex;
   justify-content: space-between;
+}
+@media only screen and (max-width: 31.25em) {
+  .position-detail {
+    flex-direction: column;
+    padding: 10rem 3rem;
+  }
+}
+.position-detail__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.position-detail__text > *:not(:last-child) {
+  align-self: start;
 }
 .position-detail__img {
   width: 90%;
