--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -305,14 +305,14 @@ body {
   max-width: 100%;
   background-color: var(--color-grey-light-2);
   padding: 10rem 10rem;
-  position: relative;
-  height: 20rem;
+  // position: relative;
+  min-height: 20rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &__text-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
   }
 
