did responsiveness cleanup for mobile screens

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -46,7 +46,7 @@
                             <a href="#" class="btn--text">Apply</a>
                         </div>
 
-                        <div class="position__location">
+                        <div class="location">
                             <svg class="location__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="32"
                                 height="32" viewBox="0 0 32 32">
                                 <title>location</title>
@@ -55,8 +55,9 @@
                                 </path>
                             </svg>
 
-                            <span class="location">{{item.location}}</span>
+                            <span class="location__text">{{item.location}}</span>
                         </div>
+
                     </div>
 
                 </a>
