--- a/jobs/templates/jobs/detail.html
+++ b/jobs/templates/jobs/detail.html
@@ -30,18 +30,20 @@
 
             <div class="jumbotron__detail">
                 <span class="jumbotron__detail--1">
-                    <svg class="location__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                        viewBox="0 0 32 32">
-                        <title>location</title>
-                        <path
-                            d="M16 0c-5.523 0-10 4.477-10 10 0 10 10 22 10 22s10-12 10-22c0-5.523-4.477-10-10-10zM16 16c-3.314 0-6-2.686-6-6s2.686-6 6-6 6 2.686 6 6-2.686 6-6 6z">
-                        </path>
-                    </svg>
+                    <div class="location">
+                        <svg class="location__icon location__icon--small" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <title>location</title>
+                            <path
+                                d="M16 0c-5.523 0-10 4.477-10 10 0 10 10 22 10 22s10-12 10-22c0-5.523-4.477-10-10-10zM16 16c-3.314 0-6-2.686-6-6s2.686-6 6-6 6 2.686 6 6-2.686 6-6 6z">
+                            </path>
+                        </svg>
 
-                    <span class="location">{{job.location}}</span>
+                        <span class="location__text location__text--small">{{job.location}}</span>
+                    </div>
                 </span>
                 <span class="jumbotron__detail--2">
-                    POSTED {{job.updated_at|date:"D d M Y"}}
+                    POSTED {{job.updated_at|date:"d M Y"}}
                 </span>
                 <span class="jumbotron__detail--3">
                     {{job.get_job_type_display}}
