--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,10 +92,21 @@ body {
   font-weight: 400;
   white-space: nowrap;
 }
+@media only screen and (max-width: 31.25em) {
+  .heading-primary--main {
+    font-size: 2.5rem;
+  }
+}
 .heading-primary--sub {
   font-size: 2rem;
   font-weight: 700;
   white-space: nowrap;
+}
+@media only screen and (max-width: 31.25em) {
+  .heading-primary--sub {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
 }
 
 .heading-secondary {
@@ -136,14 +147,16 @@ body {
   color: var(--color-white);
   text-decoration: none;
   text-transform: uppercase;
+  display: block;
+}
+@media only screen and (max-width: 31.25em) {
+  .navigation__link:link, .navigation__link:visited {
+    font-size: 2.5rem;
+  }
 }
 .navigation__link:hover, .navigation__link:active {
-  background-color: green;
+  background-color: var(--color-primary-dark);
 }
-.navigation__current {
-  background-color: red;
-}
-
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -212,11 +225,25 @@ body {
 .location {
   font-size: 2rem;
   color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
 }
 .location__icon {
   fill: var(--color-primary-light);
   width: 2rem;
+  height: 2rem;
   margin-right: 1rem;
+}
+@media only screen and (max-width: 31.25em) {
+  .location__icon--small {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+}
+@media only screen and (max-width: 31.25em) {
+  .location__text--small {
+    font-size: 1.25rem;
+  }
 }
 
 .card {
@@ -236,6 +263,11 @@ body {
   align-items: center;
   justify-content: center;
 }
+@media only screen and (max-width: 31.25em) {
+  .jumbotron {
+    padding: 2rem 2rem;
+  }
+}
 .jumbotron__text-box {
   text-align: center;
 }
@@ -243,10 +275,21 @@ body {
   font-size: 6rem;
   text-transform: uppercase;
 }
+@media only screen and (max-width: 31.25em) {
+  .jumbotron__heading {
+    font-size: 2.5rem;
+    white-space: nowrap;
+  }
+}
 .jumbotron__detail {
   display: flex;
   align-items: center;
   font-size: 2rem;
+}
+@media only screen and (max-width: 31.25em) {
+  .jumbotron__detail {
+    font-size: 1.25rem;
+  }
 }
 .jumbotron__detail--1 {
   display: flex;
@@ -272,6 +315,11 @@ body {
   width: 45%;
   margin: 0 auto;
 }
+@media only screen and (max-width: 31.25em) {
+  .about-box {
+    width: 90%;
+  }
+}
 
 .section-position {
   background-color: var(--color-grey-light-1);
@@ -283,6 +331,11 @@ body {
   margin: 0 auto;
   list-style: none;
 }
+@media only screen and (max-width: 31.25em) {
+  .position-box {
+    width: 90%;
+  }
+}
 
 .position__list:not(:last-child) {
   margin-bottom: 5rem;
@@ -291,9 +344,6 @@ body {
   font-size: 2.3rem;
   font-weight: 600;
   text-transform: capitalize;
-}
-.position__location {
-  display: flex;
 }
 .position__heading {
   display: flex;
