--- a/static/sass/_layout.scss
+++ b/static/sass/_layout.scss
@@ -9,6 +9,10 @@
 .about-box {
   width: 45%;
   margin: 0 auto;
+
+  @media only screen and (max-width: $bp-smallest) {
+    width: 90%;
+  }
 }
 
 //////////////////////////////////////////
@@ -23,6 +27,10 @@
   width: 45%;
   margin: 0 auto;
   list-style: none;
+
+  @media only screen and (max-width: $bp-smallest) {
+    width: 90%;
+  }
 }
 
 .position {
@@ -36,10 +44,6 @@
     font-size: 2.3rem;
     font-weight: 600;
     text-transform: capitalize;
-  }
-
-  &__location {
-    display: flex;
   }
 
   &__heading {
